[package]
name = "dioxus-lazy"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Async list components for Dioxus"
repository = "https://github.com/dioxus-community/dioxus-lazy"

[features]
default = []
examples = ["dep:dioxus"]

[dependencies]
dioxus-lib = { version = "0.6" }
dioxus-web = { version = "0.6" }
dioxus-use-mounted = "0.3"
log = "0.4"
dioxus-logger = "0.6"
web-sys = { version = "0.3", features = ["HtmlElement"] }
futures = "0.3"

# for running the examples only
dioxus = { version = "0.6", features = ["web"], optional = true }

[dev-dependencies]
console_error_panic_hook = "0.1"
